--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Smile ID</title>
 
-    <script defer src="./face-api.min.js"></script>
+    <script defer src="face-api.min.js"></script>
     <script defer  src="app.js"></script>
 
     <style>
