--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Smile ID</title>
 
-    <script defer src="face-api.min.js"></script>
-    <script defer  src="app.js"></script>
+    <script defer src="/Smile-ID-JS/face-api.min.js"></script>
+    <script defer  src="/Smile-ID-JS/app.js"></script>
 
     <style>
       body {
